[gd_scene load_steps=5 format=3 uid="uid://dvex6ouhoh1ev"]

[ext_resource type="Script" uid="uid://72tq75cibxj6" path="res://ShmupSandbox/UI/Scripts/confirm_dialog.gd" id="1_aq2ro"]
[ext_resource type="FontFile" uid="uid://bqxmc05dmv15h" path="res://ShmupSandbox/Assets/Fonts/PixelCode-ExtraBold.otf" id="3_h1ire"]
[ext_resource type="FontFile" uid="uid://chyk1vw521kif" path="res://ShmupSandbox/Assets/Fonts/Metal Lord.otf" id="3_sfbu7"]

[sub_resource type="CanvasTexture" id="CanvasTexture_gng12"]

[node name="confirm_dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aq2ro")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.133333, 0.137255, 0.137255, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_gng12")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="dialog_label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_sfbu7")
theme_override_font_sizes/font_size = 40
text = "Return to Main Menu?"

[node name="dialog_label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_h1ire")
theme_override_font_sizes/font_size = 15
text = "[SCORE WILL NOT BE SAVED]"

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80

[node name="yes_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=["confirm_dialog_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_h1ire")
theme_override_font_sizes/font_size = 25
action_mode = 0
text = "YES"
flat = true

[node name="no_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=["confirm_dialog_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_h1ire")
theme_override_font_sizes/font_size = 25
action_mode = 0
text = "NO"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/HBoxContainer/yes_button" to="." method="_on_yes_button_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/yes_button" to="." method="_on_yes_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/yes_button" to="." method="_on_yes_button_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/HBoxContainer/no_button" to="." method="_on_no_button_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/no_button" to="." method="_on_no_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/no_button" to="." method="_on_no_button_pressed"]
